<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.unibe.cm.ranfis.telephonyinfo.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.unibe.cm.ranfis.telephonyinfo.MainActivityFragment"
            tools:showIn="@layout/activity_main">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/network_cell_black_96x96"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sim_serial"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/textView1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="....."
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/tSimSerialNumber" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sim_operator"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="....."
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/tSimOperator" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sim_imsi_mcc"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="....."
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/tMcc" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sim_imsi_mnc"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="....."
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/tMnc" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/network_operator"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="....."
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/tNetworkOperator" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/network_type"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/textView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="....."
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/tNetworkType" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/msisdn"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="....."
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:id="@+id/tMSISDN" />
        </TableRow>

    </TableLayout>
        </LinearLayout>
    </ScrollView>

    </LinearLayout>